Changed max with to fix problem wen too large

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -64,6 +64,7 @@ button > i {
   float: left;
   margin-top: -80px;
   margin-left: -50px;
+  max-width: 415px;
 }
 
 .descarga{
